infra/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Ingress
metadata:
  name: longhorn-homepage-dummy
  namespace: longhorn-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/description: "Distributed block storage system"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "longhorn.png"
    gethomepage.dev/href: "https://longhorn.staging.lab.supermorphic.com"
    gethomepage.dev/pod-selector: "app=longhorn-manager"
spec:
  rules:
    - host: dummy.longhorn.homepage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
